# servit

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  log-config.yaml  loki-config.yaml  migrate.py  prometheus.yml  promtail-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  lint_and_test.yml  test.yml
app/: celery_app.py  constants.py  main.py
app/api/v0/: api.py
app/api/v0/routers/: __init__.py  categories_route.py  channels_route.py  friend_requests_route.py  server_notifications_route.py  server_permissions_route.py  server_roles_route.py  servers_route.py  subscription_request.py  users.py  users_route.py
app/api/v0/routers/staff/: staff_route.py  subscription_tier_route.py
app/core/: auth.py  aws_localstack.py  config.py  database.py  dependencies.py  email.py  logging_config.py  metrics.py  redis.py
app/models/: categories.py  channels.py  friend_requests.py  server.py  server_members.py  server_notifications.py  server_permissions.py  server_role_permissions.py  server_roles.py  server_user_roles.py  subscription_request.py  user.py
app/models/migrations/: 001_create_users.sql  001_initial_migration.sql  002_add_friends_migration.sql  003_messages_migration.sql  004_add_is_verified_to_users.sql  004_audit_logs_migration.sql  006_ban_members.sql  007_edit_audit_logs.sql  008_create_additional_user_details.sql  009_payment.sql  010_indexes.sql  011_category_roles.sql  012_notifications.sql  013_server_notifications.sql
app/models/staff/: staff.py  subscription_tier.py
app/services/v0/: audit_log_service.py  categories_service.py  channels_service.py  friend_requests_service.py  payment_gateway.py  permission_service.py  server_notifications_service.py  server_permissions_service.py  server_roles_service.py  server_service.py  sever_roles_service.py  subscription_request.py  user_service.py
app/services/v0/staff/: staff_service.py  subscription_tier_service.py
app/tasks/: delete_old_logs.py
app/templates/emails/: base.html  verification.html
app/utils/: metrics.py  s3.py
tests/: conftest.py
tests/api/v0/: test_categories.py  test_channels.py  test_friend_requests.py  test_servers.py  test_users.py
