[tool.poetry]
name = "servit"
version = "0.1.0"
description = ""
authors = ["Sarthak singh <sarthaksingh2001@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-dotenv = "^1.0.0"
asyncpg = "^0.30.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
logstash-formatter = "^0.5.17"
logstash = "^0.1.dev0"
colorlog = "^6.8.2"
orjson = "^3.10.7"
localstack = "^3.7.2"
awscli = "^1.35.23"
boto3 = "^1.35.18"
python-multipart = "^0.0.16"
fastapi-cli = "^0.0.5"
coverage = "^7.6.3"
slowapi = "^0.1.9"
redis= "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
